HTTPS proxy support

--- a/tgshd.lpi
+++ b/tgshd.lpi
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="10"/>
+    <Version Value="11"/>
     <PathDelim Value="\"/>
     <General>
       <Flags>
@@ -114,14 +114,21 @@
     </PublishOptions>
     <RunParams>
       <local>
-        <FormatVersion Value="1"/>
         <CommandLineParams Value="-r"/>
       </local>
+      <FormatVersion Value="2"/>
+      <Modes Count="1">
+        <Mode0 Name="default">
+          <local>
+            <CommandLineParams Value="-r"/>
+          </local>
+        </Mode0>
+      </Modes>
     </RunParams>
     <RequiredPackages Count="4">
       <Item1>
         <PackageName Value="fptelegram"/>
-        <MinVersion Build="11" Valid="True"/>
+        <MinVersion Build="20" Valid="True"/>
       </Item1>
       <Item2>
         <PackageName Value="lazdaemon"/>
