--- a/tgshd.lpi
+++ b/tgshd.lpi
@@ -13,6 +13,13 @@
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
     </General>
+    <VersionInfo>
+      <UseVersionInfo Value="True"/>
+      <AutoIncrementBuild Value="True"/>
+      <MajorVersionNr Value="1"/>
+      <MinorVersionNr Value="1"/>
+      <BuildNr Value="2"/>
+    </VersionInfo>
     <BuildModes Count="4">
       <Item1 Name="Default" Default="True"/>
       <Item2 Name="Debug">
@@ -134,7 +141,7 @@
     <RequiredPackages Count="4">
       <Item1>
         <PackageName Value="fptelegram"/>
-        <MinVersion Build="20" Valid="True"/>
+        <MinVersion Release="1" Valid="True"/>
       </Item1>
       <Item2>
         <PackageName Value="lazdaemon"/>
