--- a/tgshd.lpi
+++ b/tgshd.lpi
@@ -18,7 +18,8 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="1"/>
-      <BuildNr Value="2"/>
+      <RevisionNr Value="1"/>
+      <BuildNr Value="3"/>
     </VersionInfo>
     <BuildModes Count="4">
       <Item1 Name="Default" Default="True"/>
