Fix: Trailing delimiter for script run
https://github.com/Al-Muhandis/ShellRemoteBot/issues/1

--- a/tgshd.lpi
+++ b/tgshd.lpi
@@ -21,6 +21,7 @@
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="2"/>
       <RevisionNr Value="1"/>
+      <BuildNr Value="4"/>
     </VersionInfo>
     <BuildModes Count="4">
       <Item1 Name="Default" Default="True"/>
